--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </div>
     </header>
     
+    <p> Welcome to my Website, this is the the first website I've made.</p>
 </body>
 
 </html>
